@@ -1,9 +1,3 @@
-- Describe:
-  * Where play on the web
-  * Where Report bugs
-  * FAQ
-- Better explanation about how to drop objects on the Kai monastery
-- laumspur.png is on book 5, 8. Use it?
 - Google play:
   * Desde el punto 118 no puedo avanzar de ninguna manera en la primer historia. Por favor arreglen eso. Excelente libro gracias.
 - Show a toast when you change the current weapon on the Action Chart
