@@ -37,6 +37,10 @@
         Lone Wolf Adventures
     </a>, created by Liquid State Limited.
 </p>
+<p data-translation="webPlay">
+    You can play to this game with a web browser at 
+    <a class="breakable" href="https://www.projectaon.org/staff/toni">https://www.projectaon.org/staff/toni</a>.
+</p>
 <p>
     Source code available at:<br/>
     <a class="breakable" href="https://github.com/tonib/kaichronicles">
