@@ -2,7 +2,8 @@
 
 <p data-translation="kaiMonasteryInfo">
     Here you can store objects in safekeeping at the Kai Monastery. Objects dropped here will be available when you
-    continue to the next book, at the "Equipment" section.
+    continue to the next book, at the "Equipment" section. To store objects, go to the <a href="#actionChart">Action Chart</a>
+    and drop the objects you want to store.
 </p>
 
 <p>
